# Greedy.js

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
server/: Cargo.toml
server/migrations/: V1__initial.sql  V2__add_fulfilled_date.sql  V3__add_occurred_date.sql
server/src/: db.rs  handlers.rs  main.rs  models.rs
src/: desires.json  main.ts  matrix.ts  storage.ts  style.css  types.ts
src/renders/: DesireForm.ts  DesireNode.ts  MatrixQuadrant.ts  MatrixRenderer.ts
